Implementations/Additions: - Theme Switching - Static utility class to store selected theme - custom switch for turning dark mode on/off - Settings fragment created - Home Fragment now acts as Capture Mode - Users can now take pictures via capture mode. Pictures taken will be displayed on an image view. - The image view shouldn't clear on phone rotation or while users are temporarily off the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
 
     <string name="menu_capture">CAPTURE</string>
     <string name="menu_manage">MANAGE</string>
+    <string name="menu_settings">SETTINGS</string>
+
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="URL">URL</string>
+    <string name="darkMode">DARK MODE</string>
 </resources>
