Added a contextual menu so that when users long press an image in the ImagesFragment, the context menu will appear and users will be in action mode. In action mode, users will have the ability to select multiple images.
- Long press invokes action mode (context menu toolbar shows up)
- Users can see checkboxes on the image & checkboxes can be turned on/off upon pressing the checkbox

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
         <item>India</item>
     </string-array>
 
+    <!-- Context Menu for Image Management -->
+    <string name="Delete">Delete</string>
+
 </resources>
