Fixed: image multi selection - the problem before was that selecting one image would affect the view of another one. This is just because of the property of recycler views re-using holders. Now on long press, users can enter action mode. In this mode, users will be able to select multiple images and the selection count will be displayed on the toolbar above.
- Exiting the action mode will uncheck/revert all views to their original appearance.

- using Adapter.notifyItemInserted(pos) instead of notifyDatasetChanged() when adding images. Now image load/flickering disappears when populating recycler view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="menu_capture">CAPTURE</string>
     <string name="menu_manage">MANAGE</string>
     <string name="menu_settings">SETTINGS</string>
+    <string name="fragment_images">IMAGES</string>
 
     <string name="username">Username</string>
     <string name="password">Password</string>
