- Added a floating action button to the images fragment - Added some code to process the list of categories so that images which have already been lazy loaded into the recycler are not reprocessed in the event that a user moves to another fragment and returns to the dataset afterwards.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="URL">URL</string>
     <string name="darkMode">DARK MODE</string>
     <string name="add_dataset">Add Dataset</string>
+    <string name="add_image">Add Image From Gallery</string>
 
     <string name="license_prompt">Choose a license</string>
 
