Removed onDestroy from the mainActivity as it was unregistering the network callback during theme change. Also added checks to the cameraFragment to ensure the image analyzer can only be turned on if there is a classification model available.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="SwitchName">PUBLIC</string>
     <string name="create_dataset">CREATE DATASET</string>
     <string name="index">Index</string>
+    <string name="auto_classify">Auto Classify</string>
 
 
     <string-array name="model_frameworks" translatable="false">
