--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,9 @@
     <string name="create_dataset">CREATE DATASET</string>
     <string name="index">Index</string>
     <string name="auto_classify">Auto Classify</string>
+    <string name="license">License</string>
+    <string name="license_header">LICENSE</string>
+    <string name="cancel_download">Cancel Download</string>
 
 
     <string-array name="model_frameworks" translatable="false">
